<resources>
    <string name="app_name">News Daily</string>
    <string name="news_app">News App</string>
    <string name="category">Category</string>
    <string name="news_heading">News Heading</string>
    <string name="sub_heading">Sub Heading</string>
    <string name="news_daily">News Daily</string>
    <string name="sub_description">Sub Description</string>
    <string name="title">Title</string>
    <string name="read_full_news">Read full NEWS</string>
    <string name="content">Content</string>
    <string name="home">HOME</string>
    <string name="about_us">ABOUT US</string>
    <string name="contact_us">CONTACT US</string>
</resources>