<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".newsDetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/idBtnReadNews"
        android:background="@color/black"
        android:id="@+id/toolbar"
        app:title="@string/news_daily"
        app:titleTextColor="@color/white"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/idBtnReadNews"
        android:layout_below="@id/toolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/idIVnews"
                android:layout_margin="3dp"
                android:padding="3dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/idTVTitle"
                android:layout_below="@id/idIVnews"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="4dp"
                android:layout_margin="4dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_description"
                android:layout_below="@id/idTVTitle"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textColor="@color/white"
                android:id="@+id/idTVSubDesc"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idTVSubDesc"
                android:id="@+id/idTVContent"
                android:text="@string/content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textColor="@color/white"
                />

        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_full_news"
        android:background="@color/Azure_blue"
        app:backgroundTint="@color/Sapphire_Blue"
        android:textAllCaps="false"
        android:id="@+id/idBtnReadNews"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />


    
</RelativeLayout>